[package]
name = "lisp-bytecode-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
chrono = "0.4"
rayon = "1.10"

[[bin]]
name = "bytecomp"
path = "src/bin/bytecomp.rs"

[[bin]]
name = "lisp-vm"
path = "src/bin/lisp-vm.rs"

[[bin]]
name = "disasm"
path = "src/bin/disasm.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"
